增加了redis缓存功能；接通了上课时间提交数据库；优化了登录功能，利用redis缓存了用户数据；增加了一些类的数据序列化；增加了最下方增加课时的按钮；优化了一些页面布局；优化了一些配置。

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--redis缓存相关-->
+        <!-- Redis客户端 -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
