--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,12 @@ spring.mvc.static-path-pattern=/static/**
 #\u8BBE\u7F6E\u65F6\u533A
 spring.jackson.time-zone=GMT+8
 
+#Redis\u7F13\u5B58\u76F8\u5173
+
+redis.node.maxTotal=10
+redis.node.host=localhost
+redis.node.port=6379
+
+
 
 
