增加可cookis保存用户信息功能；增加了充值功能；完成了日历显示数据对接功能；完成了日历弹窗数据对接；完成了充值和消费计算功能；增加了AOP切面用于保存操作日志；增加了操作日志系统；优化了一些页面；优化了一些BUG。

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+        </dependency>
+
         <!--redis缓存相关-->
         <!-- Redis客户端 -->
         <dependency>
@@ -52,9 +57,23 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
+        <!-- Jackson Json处理工具包 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
+        <finalName>schedule</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
